# django_thriftpy2

./: .gitignore  README.md  pyproject.toml
django_thriftpy2/: apps.py  file.py
django_thriftpy2/management/commands/: thriftserve.py
django_thriftpy2/server/: rpc.py
