[tool.poetry]
name = "django_thriftpy2"
version = "0.1.0"
description = ""
authors = ["Jone <zjhjin@live.com>"]

[[tool.poetry.source]]
url = "http://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
thriftpy2 = "^0.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
